# fl_analysis

./: .gitignore  Pipfile  pyproject.toml
experiments/: Snakefile  config.yaml
experiments/1000_1000_runs_pop_size_10-2-5-8/: config.yaml
experiments/chapter3/: Snakefile  config.yaml
experiments/crosstalk/double_phenotype_fitness/CRP_Fis/: Snakefile  config.yaml
experiments/crosstalk/single_phenotype_fitness/CRP_Fis/: Snakefile  config.yaml
experiments/greedy/test/: Snakefile  config.yaml
experiments/test_data/: Snakefile  config.yaml
experiments/uniform/: Snakefile  config.yaml
experiments/uniform/test/: Snakefile
fl_analysis/: adaptive_walk.py  selection_coefficients.py  utils.py
scripts/: build_transition_matrix.py  build_transition_matrix_greedy.py  build_transition_matrix_greedy_double_ph.py  build_transition_matrix_kimura.py  build_transition_matrix_kimura_double_ph.py  build_transition_matrix_uniform.py  build_transition_matrix_uniform_double_ph.py  compute_hamming_distances.py  csv_to_array.py  extract_genotypes.py  extract_phenotypes.py  path_pickle_to_csv.py  pick_genotypes.py  pick_genotypes_double_ph.py  run_adaptive_walks.py
snakefiles/: Snakefile  config.yaml
test_pipeline/: Snakefile  adaptive_walks.pickle  config.yaml  genotypes.npy  genotypes.num.npy  hamming_distances.npy  phenotypes.npy  test_landscape.csv  transition_matrix_10-5.npz  transition_matrix_10-8.npz
